# RcppArray

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md
.github/workflows/: ci.yaml
R/: RcppExports.R  array.R
clients/array.test/: DESCRIPTION  NAMESPACE
clients/array.test/R/: RcppExports.R  zzz.R
clients/array.test/inst/tinytest/: test_array.test.R
clients/array.test/src/: RcppExports.cpp  main.cpp
clients/array.test/tests/: tinytest.R
clients/span.test/: .gitignore  DESCRIPTION  NAMESPACE  configure  configure.ac
clients/span.test/R/: RcppExports.R  zzz.R
clients/span.test/inst/tinytest/: test_array.test.R
clients/span.test/src/: RcppExports.cpp  config.h.in  main.cpp
clients/span.test/tests/: tinytest.R
clients/tuple.test/: DESCRIPTION  NAMESPACE
clients/tuple.test/R/: RcppExports.R  zzz.R
clients/tuple.test/inst/tinytest/: test_tuple.test.R
clients/tuple.test/src/: RcppExports.cpp  main.cpp
clients/tuple.test/tests/: tinytest.R
inst/include/: RcppArray.h
inst/tinytest/: test_Rcpp.asArray.R  test_RcppArray.R
man/: RcppArray-package.Rd  test.Rd
src/: RcppExports.cpp  array.h  main.cpp
tests/: tinytest.R
